<resources>
    <string name="app_name">EaziBuy</string>
    <string name="splash_app_name">EaziBuy</string>
    <string name="todo">TODO</string>
    <string name="intro_get_started">Get Started</string>
    <string name="intro_next">Next</string>
    <string name="sub_text">TextView</string>
    <string name="heading_textview">TextView</string>
    <string name="title_activity_bs_services">BsServices</string>
    <!-- Strings used for fragments for navigation -->

    <string name="to_do_post">TODO</string>
    <string name="minimum_password">your oassword must be atleast 6 characters</string>

    <string name="register_swipe">Register</string>
    <string name="register_button_text">Register</string>
    <string name="login_swipe">Log In</string>
    <string name="login_button_text">Log In</string>
    <string name="report_we_always_enjoy_hearing_any_feedback_queries_or_technical_problems_with_the_application">We always enjoy hearing any Feedback,queries or technical problems with the Application.</string>
    <string name="report_your_name">Your name</string>
    <string name="back_to_login_on_forgot">Back</string>
    <string name="submit_forgot_password">Submit</string>
    <string name="report_your_feedback">Your feedback</string>
    <string name="feedback_heading">FeedBack</string>
    <item name="rb_female" type="id">Female</item>
    <item name="rb_male" type="id">Male</item>
    <item name="btn_privacyPolicy_get_started" type="id">Get Started</item>
    <item name="btn_terms_get_started" type="id">Get Started</item>
    <item name="txt_progress_get_started" type="id">Get Started ProgressB</item>
    <item name="progress_bar_get_started" type="id">Get Started Progress Bar</item>
    <item name="rg_gender_get_started" type="id">Get Started Gender</item>
    <item name="image_layout_getting_started" type="id">Get Started Image</item>
    <item name="et_location_get_started" type="id">Get Started Location</item>
    <item name="et_date_of_birth_get_started" type="id">Get Started DOB</item>
    <item name="et_cell_number_get_started" type="id">Get Started Cell</item>
    <item name="et_fullname_get_started" type="id">Get Started Fullname</item>
    <item name="image_getting_started" type="id">Get Started Profile image</item>
    <item name="btn_create_profile_get_started" type="id">Get Started Profile Create</item>
</resources>